# trims-automodinstaller

./: README.md  modsurls.json
trims_automodinstaller/: CMakeLists.txt  Main.qml  downloader.cpp  downloader.h  main.cpp  signals.cpp  signalsclass.cpp  signalsclass.h  someclass.cpp  someclass.h
